# bevy_kart

./: .gitignore  Cargo.toml
.github/workflows/: release.yaml
audio_manager/: Cargo.toml
audio_manager/src/: audio_2d.rs  audio_3d.rs  lib.rs  prelude.rs
bevy_easy_p2p/: Cargo.toml
bevy_easy_p2p/src/: api.rs  lib.rs  prelude.rs  state.rs  systems.rs  updates.rs
bevy_easy_p2p/src/networked_transform/: mod.rs
bevy_firestore_p2p/: Cargo.toml
bevy_firestore_p2p/src/: lib.rs  systems.rs
bevy_text_input/: Cargo.toml
bevy_text_input/src/: lib.rs  prelude.rs
bevy_webrtc/: Cargo.toml
bevy_webrtc/src/: lib.rs
src/: main.rs
src/car_controller_2d/: mod.rs
src/menu/: lobby.rs  mod.rs  start.rs
src/track/: mod.rs
