[package]
name = "bevy_kart"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_text_input = { path = "bevy_text_input" }
bevy_webrtc = { path = "bevy_webrtc" }
bevy_easy_p2p = { path = "bevy_easy_p2p" }
bevy_firestore_p2p = { path = "bevy_firestore_p2p" }
audio_manager = { path = "audio_manager" }
bevy = { version = "0.17", features = ["wav"] }
avian2d = "0.4"
serde = { version = "1", features = ["derive"] }
# Browser API access used directly by this crate
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Crypto"
] }
# For compact codes: deflate compression + base62 encoding
miniz_oxide = "0.7"
base-x = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gcloud-sdk = { version = "0.28.2" }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
