[package]
name = "bevy_firestore_p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
bevy_webrtc = { path = "../bevy_webrtc" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window","Location","Document","Request","RequestInit","RequestMode","Response","Headers","Crypto"
]}
js-sys = "0.3"
base-x = "0.2"
miniz_oxide = "0.7"
bevy_easy_p2p = { path = "../bevy_easy_p2p" }



