[package]
name = "bevy_webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "MessageEvent",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcIceGatheringState",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcSessionDescription",
] }
futures-channel = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"